--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,9 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
 
-.header{
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +17,7 @@ body{
   border-bottom: 1px solid #778899;
 }
 
-.avatar-wrap{
+.avatar-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,24 +27,39 @@ body{
   overflow: hidden;
 }
 
-.avatar-img{
+.avatar-img {
   display: block;
   width: auto;
   height: 100%;
 }
-.header-content{
+.header-content {
   flex-grow: 1;
 }
 .header-title,
-.header-subtitle{
-text-align: center;
+.header-subtitle {
+  text-align: center;
 }
 
-.header-title{
-  font-family: Georgia, 'Times New Roman', Times, serif;
+.header-title,
+.section-title {
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-style: italic;
 }
 
-.header-subtitle{
+.header-subtitle {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.main{
+  width: 100%;
+  max-width: 1200px;
+  padding: 1.5rem;
+  margin: 0 auto;
+  box-sizing: border-box;
+  background-color: #fffafa;
+}
+
+.section{
+  border-bottom:1px solid #778899;
+  margin-bottom: 1rem;
 }
