--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.main{
+.main {
   width: 100%;
   max-width: 1200px;
   padding: 1.5rem;
@@ -60,7 +60,12 @@ body {
   background-color: #fffafa;
 }
 
-.section{
-  border-bottom:1px solid #778899;
+.section:not(:last-child) {
+  border-bottom: 1px solid #778899;
   margin-bottom: 1rem;
+}
+
+.list-item,
+.section-subtitle {
+  font-style: oblique;
 }
