--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
 }
@@ -112,4 +112,4 @@ body {
   display: block;
   height: 100%;
   width: auto;
-}
+} */
