--- a/styles/main.css
+++ b/styles/main.css
@@ -1,28 +1,93 @@
-/* body {
+:root{
+  font-size: calc(0.5em + 1vw);
+}
+
+*{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+img{
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+}
+
+.container{
+  width: 100%;
+  max-width: 90vw;
+  margin: 0 auto;
 }
 
 .header {
-  display: flex;
-  justify-content: center;
+
+  padding-bottom: 2em;
+  background-color: #d3d3d3;
+}
+
+.hero-header{
+display: flex;
   align-items: center;
   flex-wrap: wrap;
+}
+
+.nav-bar{
   width: 100%;
-  max-width: 1200px;
-  padding: 1rem 1.5rem;
+  flex-grow: 3;
+  flex-shrink: 0;
+  background-color: #fff;
+}
+
+.nav-list{
+  display: flex;
+  align-items: center;
+  padding: 1em;
+  width: 100%;
   margin: 0 auto;
-  box-sizing: border-box;
-  background-color: #d3d3d3;
-  border-bottom: 1px solid #778899;
+}
+
+.nav-item{
+  margin: auto;
+  list-style: none;
+}
+
+.nav-link{
+  display: block;
+  padding: 0.5em;
+  color: #2f4f4f;
+  text-decoration: none;
+  border-radius: 0.2em;
+  transition: all 0.2s linear;
+}
+
+.nav-link.active,
+.nav-link:hover{
+  background-color: #2f4f4f;
+  color: #d3d3d3;
+}
+
+.nav-link:active{
+  transform: scale(0.95);
+}
+
+.nav-link.active:active{
+  transform: scale(1);
+}
+
+.header-info{
+  margin: auto;
+  padding: 2em;
 }
 
 .avatar-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 15rem;
-  height: 15rem;
+  width: 15em;
+  height: 15em;
+  margin-bottom: 1em;
   border-radius: 100%;
   overflow: hidden;
 }
@@ -32,9 +97,11 @@
   width: auto;
   height: 100%;
 }
+
 .header-content {
   flex-grow: 1;
 }
+
 .header-title,
 .header-subtitle {
   text-align: center;
@@ -51,23 +118,150 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.main {
+.header-section {
+  margin: auto;
   width: 100%;
-  max-width: 1200px;
+  max-width: 50%;
+}
+
+.header-subtitle {
+  margin-top: 0.8em;
+}
+
+.main {
   padding: 1.5rem;
-  margin: 0 auto;
-  box-sizing: border-box;
   background-color: #fffafa;
 }
 
-.section:not(:last-child) {
-  border-bottom: 1px solid #778899;
-  margin-bottom: 1rem;
+.section{
+  padding: 2em;
+}
+
+.section-title{
+  margin-bottom: 1em;
 }
 
 .list-item,
 .section-subtitle {
   font-style: oblique;
+}
+
+
+.course-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 1.5em;
+}
+
+.course {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  border-radius: 0.5em;
+  background-color: #778899;
+  box-shadow: 3px 3px 5px 0 #2f4f4f;
+}
+
+.course > p{
+  margin-top: 0.8em;
+}
+
+.course-date {
+  margin-top: auto;
+}
+
+.course-link{
+  color: #d3d3d3;
+  text-decoration-color: transparent;
+  transition: all 0.2s linear;
+}
+
+.course-link:hover{
+  color: #2f4f4f;
+  text-decoration-color: #2f4f4f;
+}
+
+.bg-gray{
+  background-color: #d3d3d3;
+}
+
+.skills-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.skills{
+  padding: 2em;
+  flex-basis: 20em;
+  align-self: stretch;
+  margin: 1em auto;
+  border-radius: 0.5em;
+  background-color: #778899;
+  box-shadow: 3px 3px 5px #000000;
+}
+
+.list {
+  margin-top: 1em;
+}
+
+.list-item{
+  list-style: none;
+}
+
+.section-languages > p {
+  margin-bottom: 1em;
+}
+
+.projects-wrap{
+  padding: 2em;
+}
+
+.project {
+  width: 100%;
+  padding: 2em;
+  border-radius: 0.5em;
+  background-color: #778899;
+  overflow: hidden;
+}
+
+.project + .project{
+  margin-top: 2em;
+}
+
+.project-link{
+  position: relative;
+  display: block;
+  color: #d3d3d3;
+  text-decoration: none;
+}
+
+.project-desc {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 0.5em;
+  background-color: rgba(0,0,0, 0.7);
+}
+
+.project-name{
+  text-transform: uppercase;
+  margin-bottom: 1.2em;
+}
+
+.project-subtitle{
+  max-width: 70%;
+  margin-bottom: 1.2em;
+}
+
+.project-steck{
+text-transform: uppercase;
 }
 
 .footer {
@@ -77,30 +271,25 @@
   background-color: #2f4f4f;
 }
 
+
 .footer-list {
   display: flex;
   align-items: center;
-  max-width: 1200px;
-  width: 100%;
   padding: 0 1rem;
-  margin: 0 auto;
-  box-sizing: border-box;
 }
 
 .footer-list-item {
   list-style: none;
-  margin-right: 5em;
 }
 
 .footer-list-item:last-child {
-  margin-right: 0;
   margin-left: auto;
 }
 
 .footer-list-link {
   display: block;
   height: 32px;
-  padding: 1rem;
+  margin-right: 1em;
   transition: filter .2s linear;
 }
 
@@ -112,4 +301,4 @@
   display: block;
   height: 100%;
   width: auto;
-} */
+}
