--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
 :root{
   font-size: calc(0.5em + 1vw);
+
+  scroll-behavior: smooth;
 }
 
 *{
@@ -14,6 +16,55 @@ img{
   width: 100%;
   height: auto;
 }
+
+.burger{
+  position: absolute;
+  display: none;
+  right: 10px;
+  top: 10px;
+  width: 3em;
+  height: 3em;
+  cursor: pointer;
+}
+.burger span, .burger span:before, .burger span:after{
+  width: 100%;
+  position: absolute;
+  height: 0.3em;
+  background: #2f4f4f;
+  display: block;
+  transition: .3s;
+  border-radius: 0.2em;
+}
+.burger span:before{
+  content: "";
+  top: -1.2em;
+  transition: top 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+.burger span{
+  top: 1.2em;
+}
+.burger span:after{
+  content: "";
+  bottom: -1.2em;
+  transition: bottom 300ms 300ms, transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.burger span.active:before{
+  content: "";
+  top: 0px;
+  transform: rotate(45deg);
+  transition: top 300ms, transform 300ms 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.burger span.active:after{
+  content: "";
+  bottom: 0;
+  transform: rotate(-45deg);
+  transition: bottom 300ms, transform 300ms 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.burger span.active{
+  background: rgba(255, 255, 255, 0);
+}
+
 
 .container{
   width: 100%;
@@ -187,16 +238,13 @@ display: flex;
 }
 
 .skills-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1.5em;
 }
 
 .skills{
   padding: 2em;
-  flex-basis: 20em;
-  align-self: stretch;
-  margin: 1em auto;
   border-radius: 0.5em;
   background-color: #778899;
   box-shadow: 3px 3px 5px #000000;
@@ -301,4 +349,58 @@ text-transform: uppercase;
   display: block;
   height: 100%;
   width: auto;
+}
+
+@media(max-width: 768px) {
+  .burger{
+    display: block;
+  }
+
+  .header{
+    overflow: hidden;
+  }
+
+  .nav-bar{
+    position: relative;
+  }
+
+  .nav-list{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    min-height: 100vh;
+    flex-direction: column;
+    background-color: #ffffff;
+    transform: translateX(200%);
+    transition: all 0.3s linear;
+  }
+
+  .nav-list.active{
+    transform: translateX(0%);
+  }
+
+  .course-container,
+  .skills-container{
+    grid-template-columns: none;
+  }
+
+  .projects-wrap{
+    padding: 1em 0;
+  }
+
+  .project-subtitle{
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .projects {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+
+  .project {
+    padding: 1em;
+  }
 }
